--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Food Recipe</string>
+    <string name="_100">100</string>
+    <string name="publisher">Publisher</string>
+    <string name="this_is_gonna_be_the_name_of_recipe">This is gonna be the name of recipe</string>
+    <string name="no_description">No Description</string>
 </resources>
