RecipeActivity has been created

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
     <string name="app_name">Food Recipe</string>
-    <string name="_100">100</string>
+
     <string name="publisher">Publisher</string>
     <string name="this_is_gonna_be_the_name_of_recipe">This is gonna be the name of recipe</string>
     <string name="no_description">No Description</string>
     <string name="categories">Categories</string>
+    <string name="some_recipe_title">Some Recipe title</string>
+    <string name="_100">100</string>
 </resources>
