--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="categories">Categories</string>
     <string name="some_recipe_title">Some Recipe title</string>
     <string name="_100">100</string>
+    <string name="no_more_results">No more results:(</string>
 </resources>
